--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@solenopsys/mf-content",
   "version": "0.1.0",
   "scripts": {
-    "build": "vbuild"
-  }
+    "build": "vite build  -c ../../../lib.config.js"
+  },
+  "type": "module"
 }
